[package]
name = "lsp_client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.38.2", features = ["full"] }
serde_json = "1.0.107"
serde = { version = "1.0.188", features = ["derive"] }
futures = "0.3.28"
lsp-types = "0.95.0"
url = "2.5.0"
jsonrpc-lite = "0.6.0"

[[bin]]
name = "lsp_client"
path = "src/bin/main.rs"
